--- a/views/index-admin.ejs
+++ b/views/index-admin.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/head.ejs') %>
-<body>
+<body class="index-admin">
     <header>
         <h1>Houdt de scores bij van je favoriete team.</h1>
     </header>
