--- a/public/style.css
+++ b/public/style.css
@@ -1,34 +1,423 @@
+@font-face {
+    font-family: Sora-bold;
+    src: url("./assets/font/Sora-Bold.ttf");
+    font-display: swap;
+}
+
+@font-face {
+    font-family: Sora-normal;
+    src: url("./assets/font/Sora-Regular.ttf");
+    font-display: swap;
+}
+
 *, *::before, *::after {
     margin: 0;
     padding: 0;
 }
 
-h1, h2, h3, h4, p, a, strong, li, span {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+button {
+    pointer-events: auto;
+}
+.index-admin {
+    height: 100vw;
+    overflow: hidden;
 }
 
-
-header{ 
-    padding: 0 5% ;
-    margin-top: 30%;
+.index-admin header{ 
+    padding: 70px 38px 0px 38px;
+    background-color: #354BDC;
+    margin-bottom: 3px;
+    box-sizing: border-box;
+    height: 70.7vh;
 }
 
-h1 {
+.index-admin h1 {
     text-align: center;
+    width: 100%;
+    font-family: Sora-bold;
+    font-size: 21px;
+    color: white;
+    margin-bottom: 40px;
+}
+
+.index-admin h1 span {
+    color: #BABCFF;
+}
+.index-admin header form  {
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    justify-content: space-between;
     width: 100%;
 }
 
-main {
-    padding: 0 5%;
+.index-admin header form div {
+    width: 100px;
+    display: block;
+}
+
+.index-admin header form p {
     position: absolute;
-    bottom: 5%
+    left: 50%;
+    top: 40px;
+    transform: translateX(-50%);
+    color: white;
+    font-family: Sora-bold;
 }
-main ul {
-    border: 1px dashed black;
-    list-style: none;
+
+.index-admin header form input {
+    padding: 0;
+    width: 100px;
+    text-align: center;
+    color: white;
+    background-color: transparent;
+}
+
+.index-admin header form input[type="number"] {
+    border: none;
+    font-size: 32px;
+    font-family: Sora-bold;
+}
+ 
+.index-admin header form input[type="text"] {
+    border: 1px solid white;
+    border-radius: 6px;
+    font-family: Sora-normal;
+    font-size: 10px;
+    padding: 7px 0;
+    margin-top: 21px;
+}
+
+.index-admin header form input[type="text"]::placeholder {
+    color: #BABCFF;
+}
+
+.index-admin header form button {
+    display: block;
+    margin-top: 30px;
+    margin-bottom: 22px;
+    width: 100%;
+    border: none;
+    background-color: #485EF2;
+    text-decoration: underline;
+    padding: 15px 0;
+    font-size: 12px;
+    font-family: Sora-bold;
+    color: white;
+    border-radius: 5px;
+}
+.index-admin main {
+    display: block;
+    padding: 19px 38px 0 38px;
+    background-color: #FFF4F1;
+    overflow-y: scroll;
+    height: 30.3vh;
+}
+
+
+.index-admin ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.index-admin ul li {
+    margin-bottom: 4px;
+}
+
+
+.index-admin ul li a {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #FFB7A4;
+    color: white;
+    text-decoration: none;
+    padding: 13px 0;
+    border-radius: 5px;
+    -webkit-box-shadow: 0px 8px 15px -5px rgba(219,163,149,0.53); 
+    box-shadow: 0px 8px 15px -5px rgba(219,163,149,0.53);
+}
+
+.index-admin ul li a p {
+    font-family: Sora-bold;
+    font-size: 12px;
+}
+
+.index-admin ul li a strong {
+    font-family: Sora-normal;
+    font-size: 18px;
+}
+
+.updatescore header a {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    color: white;
+    text-decoration: none;
+    font-family: Sora-normal;
+}
+
+.updatescore form {
+    display: flex;
+    height: 100vh;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.updatescore form p {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    color: black;
+    font-family: Sora-bold;
+}
+
+.updatescore form div {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    width: 49%;
+    height: 84%;
+}
+
+.updatescore form div:first-of-type {
+    background-color: #354BDC;
+}
+
+.updatescore form div:nth-of-type(2) {
+    background-color: #FFF4F1;
+}
+
+.updatescore form div:nth-of-type(2) input {
+    color: black;
+}
+
+.updatescore form input {
+    padding: 0;
+    width: 100px;
+    text-align: center;
+    color: white;
+    background-color: transparent;
+}
+
+.updatescore form input[type="number"] {
+    border: none;
+    font-size: 64px;
+    font-family: Sora-bold;
     width: 100%;
 }
 
-main ul li p {
+.updatescore form input[type="text"] {
+    border: 1px solid white;
+    border-radius: 6px;
+    font-family: Sora-bold;
+    font-size: 12px;
+    padding: 7px 0;
+    margin-top: 21px;
+}
+
+.updatescore form div:nth-of-type(2) [type="text"] {
+    border: 1px solid black;
+}
+
+.updatescore form div:last-of-type {
+    height: 15%;
+    width: 100%;
+    background-color: #ACB6FA;
+    margin-top: 1%;
+    padding: 0 32px;
+}
+
+.updatescore form div:last-of-type button {
+    width: 100%;
+    border: none;
+    background-color: #485EF2;
+    text-decoration: underline;
+    padding: 15px 0;
+    font-size: 12px;
+    font-family: Sora-bold;
+    color: white;
+    border-radius: 5px;
+}
+
+.userindex {
+    max-height: 100vh;
+    overflow: hidden;
+}
+
+.userindex header {
+    background-color: #354BDC;
+    padding: 70px 38px 70px 38px;
+    margin-bottom: 3px;
+}
+
+.userindex h1 {
     text-align: center;
+    width: 100%;
+    font-family: Sora-bold;
+    font-size: 21px;
+    color: white;
+}
+.userindex h1 span {
+    color: #BABCFF;
+}
+
+.userindex main {
+    display: block;
+    padding: 19px 38px 0 38px;
+    background-color: #FFF4F1;
+    overflow-y: scroll;
+    height: 55vh;
+}
+
+.userindex main ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column-reverse;
+    max-width: 520px;
+    margin: 0 auto;
+}
+
+.userindex main ul li {
+    margin-bottom: 4px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #FFB7A4;
+    color: white;
+    text-decoration: none;
+    padding: 13px 0;
+    border-radius: 5px;
+    -webkit-box-shadow: 0px 8px 15px -5px rgba(219,163,149,0.53); 
+    box-shadow: 0px 8px 15px -5px rgba(219,163,149,0.53);
+    max-width: 520px;
+}
+
+.userindex main ul li p {
+    font-family: Sora-bold;
+    font-size: 12px;
+}
+
+.userindex main ul li strong {
+    font-family: Sora-normal;
+    font-size: 18px;
+}
+
+.zerostate {
+    text-align: center;
+    font-family: Sora-normal;
+}
+
+
+@media only screen and (min-width: 1024px) { 
+    .index-admin {
+        display: flex;
+    }
+    .index-admin header {
+        height: 100vh;
+        width: 70vw;
+        margin-bottom: 0;
+        margin-right: .5%;
+        padding: 0;
+        display: flex;
+        align-items: center; 
+        justify-content: center;
+    }
+
+
+    .index-admin header div h1 {
+        margin: 0 auto 40px auto;
+        width: 60%;
+        font-size: 32px;
+    }
+
+    .index-admin header div form {
+        display: flex;
+        flex-wrap: wrap;
+        position: relative;
+        justify-content: space-between;
+        width: 60%;
+        margin: 0 auto;
+    }
+    .index-admin header form div {
+        width: 150px;
+    }
+
+    .index-admin header form input {
+        width: 150px;
+    }
+
+    .index-admin header form input[type="number"] {
+        padding-left: 10px;
+    }
+
+    .index-admin header form input[type="text"] {
+        border: 2px solid white;
+        padding: 10px 0;
+    }
+
+    .index-admin main {
+        height: 100%;
+        width: 30vw;
+        padding-top: 38px;
+    }
+
+    .updatescore form div {
+        width: 49.7%;
+        height: 89%;
+    }
+
+    .updatescore form input[type="number"] {
+        width: 50%;
+        padding-left: 10px;
+        font-size: 240px;
+    }
+
+    .updatescore form input[type="number"]:focus {
+        outline: none;
+    }
+
+    .updatescore form div input[type="text"] {
+        font-size: 24px;
+        border-width: 2px;
+        width: fit-content;
+    }
+
+    .updatescore form p {
+        font-size: 56px;
+    }
+
+    .updatescore form div:nth-of-type(2) input[type="text"] {
+        border-width: 2px;
+    }
+
+    .updatescore form div:last-of-type {
+        height: 10%;
+        margin-top: 10px;
+    }
+
+    .updatescore form div:last-of-type button {
+        width: 30%;
+    }
+
+    .userindex header {
+        height: 25vh;
+        margin-bottom: 1vh;
+        padding: 0;
+        display: flex;
+        align-items: center;
+
+    }
+
+    .userindex h1 {
+        width: 30%;
+        margin: 0 auto;
+        font-size: 32px;
+    }
+    .userindex main {
+        height: 84vh;
+    }
 }
