--- a/views/index-user.ejs
+++ b/views/index-user.ejs
@@ -1,15 +1,24 @@
 <%- include('./partials/head.ejs') %>
-<body>
+<body class="userindex">
 <header>
-    <h1>Houdt de scores bij van je favoriete team.</h1>
+    <h1>Houdt scores <span>van je favoriete team</span> bij.</h1>
 </header>
 <main>
     <ul>
-        <% if(matchData) {%>
-            <li>matchData loaded</li>
-        <% }  else{%> 
-            <li>no matchData</li>
-        <% } %> 
+        <% newData.forEach(item => { %>
+            <li>
+                    <strong><%= item.score[0] %></strong>
+                    <p><%=item.match[0]%></p>
+                    <strong>VS</strong>
+                    <p><%=item.match[1]%></p>
+                    <strong><%= item.score[1] %></strong>
+
+                </a>
+            </li>
+        <% }) %>
+        <% if(newData.length == 0) {%> 
+        <li><p class="zerostate">Er zijn nog geen wedstrijden bekend.</p></li>
+        <% } %>
     </ul>
 </main>
 </body>
