--- a/views/index-admin.ejs
+++ b/views/index-admin.ejs
@@ -20,7 +20,7 @@
     <main>
             <ul>
                 <% newData.forEach(item => { %>
-                    <li>
+                    <li class="newmatch">
                         <a href="match/<%=item.id%>">
                             <p><%=item.match[0]%></p>
                             <strong><%= item.score[0] %></strong>
