--- a/views/index-user.ejs
+++ b/views/index-user.ejs
@@ -6,7 +6,7 @@
 <main>
     <ul>
         <% newData.forEach(item => { %>
-            <li>
+            <li class="newmatch">
                     <strong><%= item.score[0] %></strong>
                     <p><%=item.match[0]%></p>
                     <strong>VS</strong>
