Page transitions fix Chrome

--- a/views/index-admin.ejs
+++ b/views/index-admin.ejs
@@ -1,5 +1,6 @@
 <%- include('./partials/head.ejs') %>
 <body class="index-admin">
+    <div class="transition transition-swipe-1 is-active"></div>
     <header>
         <div>
             <h1>Houdt scores <span>van je favoriete team</span> bij.</h1>
