--- a/views/updatescore-admin.ejs
+++ b/views/updatescore-admin.ejs
@@ -1,5 +1,6 @@
 <%- include('./partials/head.ejs') %>
 <body class="updatescore">
+<div class="transition transition-swipe-2 is-active"></div>
 <header>
     <a href="/admin">terug</a>
 </header>
