--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@
 }
 
 @font-face {
-    font-family: Sora-normal;
+    font-family: Sora-normal, Arial, Helvetica, sans-serif;
     src: url("./assets/font/Sora-Regular.ttf");
     font-display: swap;
 }
@@ -36,7 +36,7 @@ button {
 .index-admin h1 {
     text-align: center;
     width: 100%;
-    font-family: Sora-bold;
+    font-family: Sora-bold, Arial, Helvetica, sans-serif;
     font-size: 21px;
     color: white;
     margin-bottom: 40px;
@@ -64,7 +64,7 @@ button {
     top: 40px;
     transform: translateX(-50%);
     color: white;
-    font-family: Sora-bold;
+    font-family: Sora-bold, Arial, Helvetica, sans-serif;
 }
 
 .index-admin header form input {
@@ -78,13 +78,13 @@ button {
 .index-admin header form input[type="number"] {
     border: none;
     font-size: 32px;
-    font-family: Sora-bold;
+    font-family: Sora-bold, Arial, Helvetica, sans-serif;
 }
  
 .index-admin header form input[type="text"] {
     border: 1px solid white;
     border-radius: 6px;
-    font-family: Sora-normal;
+    font-family: Sora-normal, Arial, Helvetica, sans-serif;
     font-size: 10px;
     padding: 7px 0;
     margin-top: 21px;
@@ -104,7 +104,7 @@ button {
     text-decoration: underline;
     padding: 15px 0;
     font-size: 12px;
-    font-family: Sora-bold;
+    font-family: Sora-bold, Arial, Helvetica, sans-serif;
     color: white;
     border-radius: 5px;
 }
@@ -142,12 +142,12 @@ button {
 }
 
 .index-admin ul li a p {
-    font-family: Sora-bold;
+    font-family: Sora-bold, Arial, Helvetica, sans-serif;
     font-size: 12px;
 }
 
 .index-admin ul li a strong {
-    font-family: Sora-normal;
+    font-family: Sora-normal, Arial, Helvetica, sans-serif;
     font-size: 18px;
 }
 
@@ -157,7 +157,7 @@ button {
     left: 10px;
     color: white;
     text-decoration: none;
-    font-family: Sora-normal;
+    font-family: Sora-normal, Arial, Helvetica, sans-serif;
 }
 
 .updatescore form {
@@ -173,7 +173,7 @@ button {
     top: 50%;
     transform: translate(-50%, -50%);
     color: black;
-    font-family: Sora-bold;
+    font-family: Sora-bold, Arial, Helvetica, sans-serif;
 }
 
 .updatescore form div {
@@ -208,14 +208,14 @@ button {
 .updatescore form input[type="number"] {
     border: none;
     font-size: 64px;
-    font-family: Sora-bold;
+    font-family: Sora-bold, Arial, Helvetica, sans-serif;
     width: 100%;
 }
 
 .updatescore form input[type="text"] {
     border: 1px solid white;
     border-radius: 6px;
-    font-family: Sora-bold;
+    font-family: Sora-bold, Arial, Helvetica, sans-serif;
     font-size: 12px;
     padding: 7px 0;
     margin-top: 21px;
@@ -240,7 +240,7 @@ button {
     text-decoration: underline;
     padding: 15px 0;
     font-size: 12px;
-    font-family: Sora-bold;
+    font-family: Sora-bold, Arial, Helvetica, sans-serif;
     color: white;
     border-radius: 5px;
 }
@@ -259,7 +259,7 @@ button {
 .userindex h1 {
     text-align: center;
     width: 100%;
-    font-family: Sora-bold;
+    font-family: Sora-bold, Arial, Helvetica, sans-serif;
     font-size: 21px;
     color: white;
 }
@@ -299,29 +299,68 @@ button {
 }
 
 .userindex main ul li p {
-    font-family: Sora-bold;
+    font-family: Sora-bold, Arial, Helvetica, sans-serif;
     font-size: 12px;
 }
 
 .userindex main ul li strong {
-    font-family: Sora-normal;
+    font-family: Sora-normal, Arial, Helvetica, sans-serif;
     font-size: 18px;
 }
 
 .zerostate {
     text-align: center;
-    font-family: Sora-normal;
+    font-family: Sora-normal, Arial, Helvetica, sans-serif;
 }
-
 
 input[type="number"] {
     animation: scoreFadeIn 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) forwards;
 }
-
+    
 .newmatch {
     animation: fadeIn 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) forwards;
 }
 
+
+.transition-swipe-1 {
+    width: 100%;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 1000;
+    background-color: white;
+    transition: .3s ease-out;
+    transition-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
+    transform-origin: bottom;
+    transform: scaleY(0);
+}
+
+
+.transition-swipe-1.is-active {
+    transform: scaleY(1);
+}
+
+.transition-swipe-2{
+    width: 100%;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 1000;
+    background-color: white;
+    pointer-events: none;
+    transition: .3s ease-out;
+    transition-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
+    transform-origin: top;
+    transform: scaleY(0);
+}
+
+.transition-swipe-2.is-active {
+    transform: scaleY(1);
+}
 
 @keyframes scoreFadeIn {
     from {
@@ -332,7 +371,7 @@ input[type="number"] {
         opacity: 1;
     }
 }
-
+    
 @keyframes fadeIn {
     from {
         opacity: 0;
