max-length added

--- a/views/index-admin.ejs
+++ b/views/index-admin.ejs
@@ -7,12 +7,12 @@
             <form action="/admin" method="post">
                 <div>
                     <input type="number" name="newScore" value="0" max="99">
-                    <input type="text" name="newMatch" placeholder="thuis" required>
+                    <input type="text" name="newMatch" placeholder="thuis" maxlength="20" required>
                 </div>
                 <p>VS</p>
                 <div>
                     <input type="number" name="newScore" value="0" max="99">
-                    <input type="text" name="newMatch" placeholder="uit" required>
+                    <input type="text" name="newMatch" placeholder="uit"  maxlength="20" required>
                 </div>
                 <button type="submit"> voeg wedstrijd toe </button>
             </form>
